cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_458.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/lib/apps.c:1533: error: DEAD_STORE
  The value written to &j (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/lib/apps.c:1533:5: Write of unused value
1531.       j = BIO_snprintf(buf[2], sizeof(buf[2]), "%s.attr.%s", dbfile, new_suffix);
1532.       j = BIO_snprintf(buf[1], sizeof(buf[1]), "%s.%s", dbfile, old_suffix);
1533.       j = BIO_snprintf(buf[0], sizeof(buf[0]), "%s.%s", dbfile, new_suffix);
            ^
1534.   #else
1535.       j = BIO_snprintf(buf[4], sizeof(buf[4]), "%s-attr", dbfile);
